[package]
name = "bbvm"
version = "0.1.0"
edition = "2021"
authors = ["Molive <moliveofscratch@gmail.com>"]
description = "A BareBones compiler in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm12-0",
] }
clap = "3.0.0-beta.5"
regex = "1"
lazy_static = "1"
chrono = "0.4"
